@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods




class GreenSpace{
    name
    type
    description
    area
    manager
    address
}

class Agenda {
    diary
    entries
}

class ToDoListEntry {
    -task
}

class ToDoList {
    -entries
}


class Task {
    reference
    description
    status
    urgency
    expectedDuration
    greenSpace
}

class User {
   name
   birthDate
   admissionDate
   address
   phoneNumber
   email
   taxPayerNumber
   idDocTypeNumber
   job
   skills
   task
   idType
}


Task "1" -- "1..*" ToDoList : exists in >
ToDoList "1" -- "1..*" ToDoListEntry : contains >
ToDoListEntry "1" -- "1" Task : contains >
ToDoListEntry "1" -- "1" AgendaEntry : exists in >
ToDoListEntry "1..*" -- "1" GreenSpace : made for a >
AgendaEntry "1..*" -- "1" Agenda : belongs to >
ToDoListEntry "1" -- "1" ToDoList : has to be in >
User "1" -- "1..*" GreenSpace : manages >

@enduml

